--- a/css.css
+++ b/css.css
@@ -2,3 +2,9 @@ body{
     background-color: ghostwhite;
     color: black;
 }
+*{
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: blueviolet;
+    overflow: hidden;
+}
